added feature to view,add&select new data  and image urls

--- a/BookReviewApp.Web/appsettings.json
+++ b/BookReviewApp.Web/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BookReviewApp;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Information", 
       "Microsoft.AspNetCore": "Warning"
     }
   },
