--- a/BookReviewApp.Services/BookReviewApp.Services.csproj
+++ b/BookReviewApp.Services/BookReviewApp.Services.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\BookReviewApp.Data\BookReviewApp.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
