--- a/BookReviewApp.Tests/BookReviewApp.Tests.csproj
+++ b/BookReviewApp.Tests/BookReviewApp.Tests.csproj
@@ -11,20 +11,22 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\BookReviewApp.Domain\BookReviewApp.Domain.csproj" />
+    <ProjectReference Include="..\BookReviewApp.Services\BookReviewApp.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookReviewApp.Domain\BookReviewApp.Domain.csproj" />
-    <ProjectReference Include="..\BookReviewApp.Data\BookReviewApp.Data.csproj" />
-    <ProjectReference Include="..\BookReviewApp.Services\BookReviewApp.Services.csproj" />
-    <ProjectReference Include="..\BookReviewApp.Web\BookReviewApp.Web.csproj" />
+    <Using Include="Xunit" />
+    <Using Include="Moq" />
+    <Using Include="FluentAssertions" />
   </ItemGroup>
 
 </Project>
