--- a/BookReviewApp.Web/BookReviewApp.Web.csproj
+++ b/BookReviewApp.Web/BookReviewApp.Web.csproj
@@ -1,24 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <ItemGroup>
-    <ProjectReference Include="..\BookReviewApp.Domain\BookReviewApp.Domain.csproj" />
-    <ProjectReference Include="..\BookReviewApp.Data\BookReviewApp.Data.csproj" />
-    <ProjectReference Include="..\BookReviewApp.Services\BookReviewApp.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookReviewApp.Data\BookReviewApp.Data.csproj" />
+    <ProjectReference Include="..\BookReviewApp.Domain\BookReviewApp.Domain.csproj" />
+    <ProjectReference Include="..\BookReviewApp.Services\BookReviewApp.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
+  </ItemGroup>
 
 </Project>
