--- a/BookReviewApp.Web/appsettings.json
+++ b/BookReviewApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BookReviewApp;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=BookReviewApp.db"
   },
   "Logging": {
     "LogLevel": {
