--- a/BookReviewApp.Services/BookReviewApp.Services.csproj
+++ b/BookReviewApp.Services/BookReviewApp.Services.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
   </ItemGroup>
 
