feat: implement MongoDB integration with dual database support
- Add MongoDB context and settings for both Atlas and local MongoDB
- Implement MongoDB repositories for all entities (Books, Authors, Reviews, Users, Categories)
- Add dual database configuration with UseAtlas flag for switching between Atlas and local MongoDB
- Update all domain models to support MongoDB ObjectId
- Modify services layer to work with MongoDB repositories
- Update controllers and views to handle MongoDB data
- Add MongoDB package dependencies and configuration
- Include sample data seeding for MongoDB
- Configure connection strings for both Atlas and local MongoDB environments
- Update appsettings.json with MongoDB configuration options

This commit enables the application to work with both MongoDB Atlas (cloud) and local MongoDB (Compass), providing flexibility for development and production environments.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BookReviewApp.db"
-  },
   "MongoDbSettings": {
     "ConnectionString": "mongodb+srv://nene171408:Naledi%4014@cluster0.hazlc1s.mongodb.net/BookReviewApp?retryWrites=true&w=majority&appName=Cluster0",
     "LocalConnectionString": "mongodb://localhost:27017/BookReviewApp",
     "DatabaseName": "BookReviewApp",
-    "UseAtlas": false
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information", 
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "UseAtlas": true
+  }
+} 
