--- a/BookReviewApp.Services/BookReviewApp.Services.csproj
+++ b/BookReviewApp.Services/BookReviewApp.Services.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
 
   <PropertyGroup>
