--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://nene171408:Naledi%4014@cluster0.hazlc1s.mongodb.net/BookReviewApp?retryWrites=true&w=majority&appName=Cluster0",
+    "ConnectionString": "",
     "LocalConnectionString": "mongodb://localhost:27017/BookReviewApp",
     "DatabaseName": "BookReviewApp",
     "UseAtlas": true
