Complete Azure SQL Database integration and cleanup - Added Azure SQL Database connection - Fixed user registration/login functionality - Updated app configuration for production - Cleaned up temporary deployment files - Added comprehensive Azure SQL setup guide - Improved navigation and UI components

--- a/BookReviewApp.Web/appsettings.Production.json
+++ b/BookReviewApp.Web/appsettings.Production.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BookReviewApp.db"
+    "DefaultConnection": "Server=your-server.database.windows.net;Database=BookReviewAppDB;User Id=your-username;Password=your-password;TrustServerCertificate=true;"
   },
   "UseMongoDB": false,
-  "Environment": "Production",
-  "AllowedHosts": "*"
+  "ForceDatabaseRecreation": false,
+  "ASPNETCORE_ENVIRONMENT": "Production"
 } 
