--- a/BookReviewApp.Web/appsettings.json
+++ b/BookReviewApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BookReviewApp.db"
+    "DefaultConnection": ""
   },
   "MongoDbSettings": {
     "ConnectionString": "",
